@@ -1,6 +1,7 @@
 Version 0.2.3 - UNRELEASED
  * GUI change: tool and process settings can be combined into tasks
  * added export of EMC tool definitions
+ * store configured settings to a file in the user's home directory
  * fixed "overlap" calculation
  * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
  * improved GUI for model scaling
